# L2

./: FuncA.cpp  FuncA.h  Makefile  Makefile.am  configure.ac  control  main.cpp
.github/workflows/: build-tarball.yml  c-cpp.yml  debian-package.yml  main.yml  tests.yml
debian/: changelog  control  control.in  copyright
tests/: test_FuncA.cpp
